[package]
name = "oxfmt"
version = "0.4.0"
edition = "2024"
authors = ["septech"]
description = "Small binary serialization and deserialization library"
license = "MIT"
repository = "https://github.com/septech/oxfmt"

[dependencies]
anyhow = "1.0.98"
downcast-rs = "2.0.1"
oxfmt_derive = "0.2.0"

[patch.crates-io]
oxfmt_derive = { path = "oxfmt_derive" }

[lib]
name = "oxfmt"
path = "src/lib.rs"
