[package]
name = "oxfmt_derive"
version = "0.2.0"
edition = "2024"
authors = ["septech"]
description = "Derive macro for oxfmt"
license = "MIT"
repository = "https://github.com/septech/oxfmt"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
